# camblet-driver

./: .gitignore  .gitmodules  ADOPTERS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Dockerfile.injector  LICENSE  LICENSE.MIT  Makefile  NOTICE  README.md  Vagrantfile  assert.h  attest.c  attest.h  augmentation.c  augmentation.h  base64.c  base64.h  buffer.c  buffer.h  ca.json  camblet.h  cert_tools.c  cert_tools.h  certificate_rsa.h  commands.c  commands.h  config.c  config.h  crypto.c  crypto.h  csr.c  csr.h  device_driver.c  device_driver.h  dkms.conf  (+47 more)
.github/: settings.yml
cli/: go.mod  main.go
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  nasp-kernel-module.cron.d.ex  nasp-kernel-module.doc-base.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm  prerm.ex  rules  watch.ex
ebpf/: Makefile  xdp_pass_kern.c
include/: assert.h  augmentation.h  buffer.h  camblet.h  cert_tools.h  commands.h  config.h  csr.h  device_driver.h  http.h  opa.h  proxywasm.h  rsa_tools.h  sd.h  socket.h  string.h  tls.h  trace.h  wasm.h
opa/: README.md  xdp.rego  xdp_test.rego
samples/: .gitignore  Cargo.toml  Makefile  README.md  go.sum  hello.wat  main.c  main.go  main.rs  main.zig
samples/dns/: dns.go  dns_easyjson.go
samples/dns-go/: Makefile  go.mod  main.go
samples/dns-go/dns/: dns.go
samples/dns-rust/: Cargo.toml  Makefile
samples/ebpf/: Makefile  README.md  xdp_pass_kern.bpf.c
samples/hello-world-rust/: Cargo.toml  Makefile
samples/hello-world-rust/src/: main.rs
samples/opa/: Makefile  xdp.rego  xdp_test.rego
scripts/: update_changelog_readme.sh  update_versions.sh
src/: augmentation.c  buffer.c  cert_tools.c  commands.c  config.c  csr.c  device_driver.c  http.c  jwt.c  main.c  opa.c  proxywasm.c  rsa_tools.c  sd.c  socket.c  spiffe.c  string.c  task_context.c  trace.c  wasm.c
static/: certificate_rsa.h  filter_stats.h  socket_wasm.h
test/: camblet.py  file-server.go  go.mod  go.sum  ktls.bats  recvflags.c  (+7 more)
wasm-modules/csr-rust/: Cargo.toml
wasm-modules/csr-rust/.cargo/: config.toml
wasm-modules/csr-rust/src/: main.rs
(+16 files in other folders)
