[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-parser = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "dns-rust"
path = "main.rs"

# [lib]
# crate-type = ["cdylib"]
# bench = false
# name = "dns-rust"
# path = "main.rs"

[profile.release]
lto = true
