[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-parser = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "0.4"
etherparse = { git = "https://github.com/JulianSchmid/etherparse" }

[[bin]]
name = "dns-rust"
path = "main.rs"

[build]
target = "wasm32-unknown-unknown"
rustflags = ["-C target-feature=+multivalue"]

# [lib]
# crate-type = ["cdylib"]
# bench = false
# name = "dns-rust"
# path = "main.rs"

[profile.release]
lto = true
