[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0" }
serde_json = "1.0"
postcard = "1.0"
pdu = "1.4.2"
domain = { version = "0.7.1", default-features = false }

[[bin]]
name = "dns-rust"
path = "main.rs"

# [lib]
# crate-type = ["cdylib"]
# bench = false
# name = "dns-rust"
# path = "main.rs"

[profile.release]
lto = true
