[package]
name = "csr-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

x509-cert = { version = "0.2.5", features = ["builder"] }
rsa = {version = "0.9.6", features = ["sha2"]}
getrandom = { version = "0.2", features = ["custom"] }

[[bin]]
name = "csr-rust"
